Adding test structure, time_slot tables, endpoints
