# openapi.yaml
@@ -81,10 +81,25 @@ paths:
                   type: string
                 event_description:
                   type: string
+                duration:
+                  type: integer
+                start_time:
+                  type: array
+                  items:
+                    type: string
+                    format: date-time
+                end_time:
+                  type: array
+                  items:
+                    type: string
+                    format: date-time
               required:
                 - organizer_id
                 - event_name
                 - event_description
+                - duration
+                - start_time
+                - end_time
       responses:
         '201':
           description: Event created successfully
@@ -130,14 +145,29 @@ paths:
                     type: string
                   event_description:
                     type: string
+                  duration:
+                    type: integer
+                  start_time:
+                    type: array
+                    items:
+                      type: string
+                      format: date-time
+                  end_time:
+                    type: array
+                    items:
+                      type: string
+                      format: date-time
                   created_at:
+                    type: string
+                    format: date-time
+                  updated_at:
                     type: string
                     format: date-time
         '404':
           description: Event not found
     put:
-      summary: Update an event's description
-      operationId: UpdateEventDescription
+      summary: Update an event's name, description or duration
+      operationId: UpdateEventDetails
       parameters:
         - name: event_id
           in: path
@@ -151,13 +181,19 @@ paths:
             schema:
               type: object
               properties:
+                event_name:
+                  type: string
                 event_description:
                   type: string
+                duration:
+                  type: integer
               required:
+                - event_name
                 - event_description
+                - duration
       responses:
         '204':
-          description: Event description updated successfully
+          description: Event updated successfully
         '404':
           description: Event not found
     delete:
@@ -196,7 +232,22 @@ paths:
                       type: string
                     event_description:
                       type: string
+                    duration:
+                      type: integer
+                    start_time:
+                      type: array
+                      items:
+                        type: string
+                        format: date-time
+                    end_time:
+                      type: array
+                      items:
+                        type: string
+                        format: date-time
                     created_at:
+                      type: string
+                      format: date-time
+                    updated_at:
                       type: string
                       format: date-time
   /events/organizer/{organizer_id}:
@@ -227,7 +278,296 @@ paths:
                       type: string
                     event_description:
                       type: string
+                    duration:
+                      type: integer
+                    start_time:
+                      type: array
+                      items:
+                        type: string
+                        format: date-time
+                    end_time:
+                      type: array
                     created_at:
+                      type: string
+                      format: date-time
+                    updated_at:
+                      type: string
+                      format: date-time
+
+  /time-slots/user:
+    post:
+      summary: Create time slots for a user
+      operationId: CreateTimeSlotUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user_id:
+                  type: integer
+                start_time:
+                  type: array
+                  items:
+                    type: string
+                    format: date-time
+                end_time:
+                  type: array
+                  items:
+                    type: string
+                    format: date-time
+              required:
+                - user_id
+                - start_time
+                - end_time
+      responses:
+        '201':
+          description: User time slot created successfully
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    user_id:
+                      type: integer
+                    start_time:
+                      type: string
+                      format: date-time
+                    end_time:
+                      type: string
+                      format: date-time
+    get:
+      summary: Get time preferences by user
+      operationId: GetTimePreferencesByUser
+      parameters:
+        - name: user_id
+          in: query
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: List of user time preferences
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    user_id:
+                      type: integer
+                    start_time:
+                      type: string
+                      format: date-time
+                    end_time:
+                      type: string
+                      format: date-time
+    put:
+      summary: Update a user time slot
+      operationId: UpdateTimePreferenceUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: integer
+                user_id:
+                  type: integer
+                start_time:
+                  type: string
+                  format: date-time
+                end_time:
+                  type: string
+                  format: date-time
+              required:
+                - id
+                - user_id
+                - start_time
+                - end_time
+      responses:
+        '204':
+          description: User time slot updated successfully
+    delete:
+      summary: Delete a user time slot
+      operationId: DeleteTimePreferenceUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: integer
+                user_id:
+                  type: integer
+              required:
+                - id
+                - user_id
+      responses:
+        '204':
+          description: User time slot deleted successfully
+  /time-slots/event:
+    # post:
+    #   summary: Create a new event time slot
+    #   operationId: CreateTimeSlotEvent
+    #   requestBody:
+    #     required: true
+    #     content:
+    #       application/json:
+    #         schema:
+    #           type: array
+    #           items:
+    #             type: object
+    #             properties:
+    #               event_id:
+    #                 type: integer
+    #               start_time:
+    #                 type: string
+    #                 format: date-time
+    #               end_time:
+    #                 type: string
+    #                 format: date-time
+    #             required:
+    #               - event_id
+    #               - start_time
+    #               - end_time
+    #   responses:
+    #     '201':
+    #       description: Event time slot created successfully
+    #       content:
+    #         application/json:
+    #           schema:
+    #             type: array
+    #             items:
+    #               type: object
+    #               properties:
+    #                 id:
+    #                   type: integer
+    #                 event_id:
+    #                   type: integer
+    #                 start_time:
+    #                   type: string
+    #                   format: date-time
+    #                 end_time:
+    #                   type: string
+    #                   format: date-time
+    get:
+      summary: Get time preferences by event
+      operationId: GetTimePreferencesByEvent
+      parameters:
+        - name: event_id
+          in: query
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: List of event time preferences
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    event_id:
+                      type: integer
+                    start_time:
+                      type: string
+                      format: date-time
+                    end_time:
+                      type: string
+                      format: date-time
+    put:
+      summary: Update an event time slot
+      operationId: UpdateTimePreferenceEvent
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: integer
+                event_id:
+                  type: integer
+                start_time:
+                  type: string
+                  format: date-time
+                end_time:
+                  type: string
+                  format: date-time
+              required:
+                - id
+                - event_id
+                - start_time
+                - end_time
+      responses:
+        '204':
+          description: Event time slot updated successfully
+    delete:
+      summary: Delete an event time slot
+      operationId: DeleteTimePreferenceEvent
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: integer
+                event_id:
+                  type: integer
+              required:
+                - id
+                - event_id
+      responses:
+        '204':
+          description: Event time slot deleted successfully
+  /matching-slots/event:
+    get:
+      summary: Get matching time slots for event
+      operationId: GetMatchingTimeSlotsForEvent
+      parameters:
+        - name: event_id
+          in: query
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: List of matching time slots for event
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    event_id:
+                      type: integer
+                    start_time:
+                      type: string
+                      format: date-time
+                    end_time:
                       type: string
                       format: date-time
 
